--- a/views/drinks_index.ejs
+++ b/views/drinks_index.ejs
@@ -4,12 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Drink</title>
+    <title>Drinks</title>
 </head>
 <body>
     <h1>Welcome to Gitpub</h1>
 
+    <ul>
+        <% for(let i = 0; i < allDrinks.length; i++ ) {%>
+            <% let drink = allDrinks[i].name %>
+            <% drink = drink[0].toUpperCase() + drink.substring(1).toLowerCase() %>
+            
+            <li><%= drink %></li>
 
+
+        <% } %>
+    </ul>
 
 
 
