--- a/views/drinks_index.ejs
+++ b/views/drinks_index.ejs
@@ -13,8 +13,10 @@
         <% for(let i = 0; i < allDrinks.length; i++ ) {%>
             <% let drink = allDrinks[i].name %>
             <% drink = drink[0].toUpperCase() + drink.substring(1).toLowerCase() %>
-            
-            <li><%= drink %></li>
+
+            <li>
+                <a href="/drinks/<%= i %>"><%= drink %></a>
+            </li>
 
 
         <% } %>
