--- a/views/drinks_index.ejs
+++ b/views/drinks_index.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Welcome to Gitpub</h1>
-
+    <h2>Drinks</h2>
     <ul>
         <% for(let i = 0; i < allDrinks.length; i++ ) {%>
             <% let drink = allDrinks[i].name %>
@@ -19,6 +19,20 @@
             </li>
 
 
+        <% } %>
+    </ul>
+
+    <h2>Food</h2>
+    <ul>
+        <% for(let i=0; i < allFoods.length; i++ ) {%>
+            <% let food = allFoods[i].name %>
+            <% food = food[0].toUpperCase() + food.substring(1).toLowerCase() %>
+    
+            <li>
+                <a href="/foods/<%= i %>"><%= food %></a>
+            </li>
+    
+    
         <% } %>
     </ul>
 
