--- a/views/foods_show.ejs
+++ b/views/foods_show.ejs
@@ -5,15 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Drinks</title>
+    <title>FOOD</title>
 </head>
 
 <body>
-    <h1>At foo bar</h1>
-    <h2><%= drink.name %></h2>
-    <!-- <a href="<%= drink.image %>"><%= drink.name %></a> -->
-    <img src="<%= drink.image %>.jpg" alt="<%= drink.name %>" />
-    <h3>Price: $<%= drink.price %></h3>
+    <h1>At food bar</h1>
+    <h2><%= food.name %></h2>
+    <img src="<%= food.image %>" alt="<%= food.name %>" />
+    <h3>Price: $<%= food.price %></h3>
     <a href="/drinks">Back</a>
 
 
